force-app/main/default/objects/Wage_Claim__c/fields/Select_which_you_are_claiming__c.field-meta.xml
<CustomField>
    <fullName>Select_which_you_are_claiming__c</fullName>
    <label>Select which you are claiming</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Waiting time penalties [Labor Code 203]</fullName>
            </value>
            <value>
                <fullName>Bounced check penalty [Labor Code 203.1]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>