force-app/main/default/objects/Wage_Claim__c/fields/Senior_Deputy_Labor_Commissioner__c.field-meta.xml
<CustomField>
    <fullName>Senior_Deputy_Labor_Commissioner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Senior Deputy Labor Commissioner</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Senior_Deputy_Labor_Commissioner__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User.Hearing_Officer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Wage_Claims2</relationshipName>
    <type>Lookup</type>
</CustomField>