force-app/main/default/objects/Wage_Claim__c/fields/Settled_No_Determination_Made_PH__c.field-meta.xml
<CustomField>
    <fullName>Settled_No_Determination_Made_PH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Settled - No Determination Made</label>
    <type>Checkbox</type>
</CustomField>