force-app/main/default/objects/Wage_Claim__c/fields/Settled_worker_is_employee__c.field-meta.xml
<CustomField>
    <fullName>Settled_worker_is_employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Settled - worker is employee</label>
    <type>Checkbox</type>
</CustomField>