force-app/main/default/objects/Wage_Claim__c/fields/Specify_Other_Claim__c.field-meta.xml
<CustomField>
    <fullName>Specify_Other_Claim__c</fullName>
    <label>Specify Other Claim</label>
    <length>255</length>
    <type>Text</type>
</CustomField>