force-app/main/default/objects/Wage_Claim__c/fields/Subtotal_of_all_Amounts_Earned_Claimed__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_of_all_Amounts_Earned_Claimed__c</fullName>
    <formula>Regular_Wages_Amount_Earned_Claimed__c + Overtime_Wages_Amount_Earned_Claimed__c + Meal_Period_Wages_Amount_Earned_Claimed__c + Rest_Period_Wages_Amount_Earned_Claimed__c + Split_Shift_Prem_Amount_Earned_Claimed__c + Reporting_Time_Pay_Amount_Earned_Claimed__c + Commissions_Amount_Earned_Claimed__c + Vacation_Wages_Amount_Earned_Claimed__c + Business_Expenses_Amount_Earned_Claimed__c + Unlawful_Deduction_Amount_Earned_Claimed__c + Other_Amount_Earned_Claimed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subtotal of all Amounts Earned/Claimed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>