force-app/main/default/objects/Wage_Claim__c/fields/Total_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Due__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(Total_Due_IMPORT__c)), Total_Due_IMPORT__c &gt; 0), Total_Due_IMPORT__c, Liquidated_Damages_Due__c  +  Subtotal_LC_98_1__c + Expenses_Due__c + Deductions_Recovered_Due__c + LC_203_1_NSF_Check_Penalty_Due__c + LC_203_Waiting_Time_Penalty_Due__c + LC_226f_Due__c + LC_1198_5_k_Due__c + Total_Interest__c + Other_Due__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>