force-app/main/default/objects/Wage_Claim__c/fields/Total_Hearing_Awards__c.field-meta.xml
<CustomField>
    <fullName>Total_Hearing_Awards__c</fullName>
    <formula>Hearing_Expenses_Awarded__c + Hearing_Liquidated_Damages_Awarded__c + Hearing_Minimum_Wage_Awarded__c + Hearing_Overtime_Wage_Awarded__c + Hearing_Waiting_Time_Penalty_Awarded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hearing Awards</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>