force-app/main/default/objects/Wage_Claim__c/fields/Total_Hearing_Collected__c.field-meta.xml
<CustomField>
    <fullName>Total_Hearing_Collected__c</fullName>
    <formula>Hearing_Expenses_Collected__c + Hearing_Liquidated_Damages_Collected__c + Hearing_Minimum_Wage_Collected__c + Hearing_Overtime_Wage_Collected__c + Hearing_Waiting_Time_Penalty_Collected__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hearing Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>