force-app/main/default/objects/Wage_Claim__c/fields/Total_Interest__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(Total_Interest_IMPORT__c)), Total_Interest_IMPORT__c &gt; 0), Total_Interest_IMPORT__c, Interest_Per_LC_1194_2_MANUAL__c + Interest_Per_LC_2802_MANUAL__c + Interest_Per_LC_98_1_MANUAL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>