force-app/main/default/objects/Wage_Claim__c/fields/Total_Interest_IMPORT__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_IMPORT__c</fullName>
    <label>Total Interest IMPORT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>