force-app/main/default/objects/Wage_Claim__c/fields/Transmittal_Date__c.field-meta.xml
<CustomField>
    <fullName>Transmittal_Date__c</fullName>
    <label>Transmittal Date</label>
    <type>Date</type>
</CustomField>