force-app/main/default/objects/Wage_Claim__c/fields/Union_contract_covering_your_employment__c.field-meta.xml
<CustomField>
    <fullName>Union_contract_covering_your_employment__c</fullName>
    <label>Union contract covering your employment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (Attach a copy of the Collective Bargaining Agreement)</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>