force-app/main/default/objects/Wage_Claim__c/fields/Unlawful_Deduction_Amount_Earned_Claimed__c.field-meta.xml
<CustomField>
    <fullName>Unlawful_Deduction_Amount_Earned_Claimed__c</fullName>
    <label>Unlawful Deduction Amount Earned/Claimed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>