force-app/main/default/objects/Wage_Claim__c/fields/Unlawful_Deductions_Claim_Period_EndDate__c.field-meta.xml
<CustomField>
    <fullName>Unlawful_Deductions_Claim_Period_EndDate__c</fullName>
    <label>Unlawful Deductions Claim Period EndDate</label>
    <type>Date</type>
</CustomField>