force-app/main/default/objects/Wage_Claim__c/fields/Vacation_Recovered__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Recovered__c</fullName>
    <label>Vacation Recovered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>