force-app/main/default/objects/Wage_Claim__c/fields/Vacation_Wages_Claim_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Wages_Claim_Period_End_Date__c</fullName>
    <label>Vacation Wages Claim Period End Date</label>
    <type>Date</type>
</CustomField>