force-app/main/default/objects/Wage_Claim__c/fields/Waiting_time_penalties_Labor_Code_203__c.field-meta.xml
<CustomField>
    <fullName>Waiting_time_penalties_Labor_Code_203__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waiting time penalties (Labor Code 203)</label>
    <type>Checkbox</type>
</CustomField>