force-app/main/default/objects/Wage_Claim__c/fields/Waiting_Time_Penalty_Collected_RofJ__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Time_Penalty_Collected_RofJ__c</fullName>
    <label>Waiting Time Penalty Collected (RofJ)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>