force-app/main/default/objects/Wage_Claim__c/fields/WC_CaseSFID__c.field-meta.xml
<CustomField>
    <fullName>WC_CaseSFID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WC CaseSFID</label>
    <type>Text</type>
</CustomField>