force-app/main/default/objects/Wage_Claim__c/fields/WCA_102_100_rec_d__c.field-meta.xml
<CustomField>
    <fullName>WCA_102_100_rec_d__c</fullName>
    <label>WCA 102 100 rec'd</label>
    <type>Date</type>
</CustomField>