force-app/main/default/objects/Wage_Claim__c/fields/WCA_102_Date_Appeal_Filed__c.field-meta.xml
<CustomField>
    <fullName>WCA_102_Date_Appeal_Filed__c</fullName>
    <label>WCA 102 Date Appeal Filed</label>
    <type>Date</type>
</CustomField>