force-app/main/default/objects/Wage_Claim__c/fields/WCA_102_Date_Defendant_Served_ODA__c.field-meta.xml
<CustomField>
    <fullName>WCA_102_Date_Defendant_Served_ODA__c</fullName>
    <label>WCA 102 Date Defendant Served ODA</label>
    <type>Date</type>
</CustomField>