force-app/main/default/objects/Wage_Claim__c/fields/WCA_102_Defenses_Raised_by_Defendant__c.field-meta.xml
<CustomField>
    <fullName>WCA_102_Defenses_Raised_by_Defendant__c</fullName>
    <label>WCA 102 Defenses Raised by Defendant</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>