force-app/main/default/objects/Wage_Claim__c/fields/WCA_102_Referred_to_Section__c.field-meta.xml
<CustomField>
    <fullName>WCA_102_Referred_to_Section__c</fullName>
    <label>Office Location Receiving Referral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>