force-app/main/default/objects/Wage_Claim__c/fields/WCA_102_Trial_Date__c.field-meta.xml
<CustomField>
    <fullName>WCA_102_Trial_Date__c</fullName>
    <label>WCA 102 Trial Date</label>
    <type>Date</type>
</CustomField>