force-app/main/default/objects/Wage_Claim__c/fields/WCA_102_Witness_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>WCA_102_Witness_Home_Phone__c</fullName>
    <label>WCA 102 Witness Home Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>