force-app/main/default/objects/Wage_Claim__c/fields/WCA_102_Witness_Name_and_Address__c.field-meta.xml
<CustomField>
    <fullName>WCA_102_Witness_Name_and_Address__c</fullName>
    <label>WCA 102 Witness Name and Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>