force-app/main/default/objects/Wage_Claim__c/fields/WCA_114_In_addition_Paragraph__c.field-meta.xml
<CustomField>
    <fullName>WCA_114_In_addition_Paragraph__c</fullName>
    <defaultValue>'In addition, there is one unpaid judgment entered on [JUDGMENT DATE] for wages accessed against [EMPLOYER NAME] on Citation [CITATION NUMBER] for unpaid minimum wages in the amount $[AMOUNT].'</defaultValue>
    <label>WCA 114 In addition Paragraph</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>