force-app/main/default/objects/Wage_Claim__c/fields/WCA_115_In_addition_Paragraph__c.field-meta.xml
<CustomField>
    <fullName>WCA_115_In_addition_Paragraph__c</fullName>
    <defaultValue>'In addition, [DEFENDANT NAME] was issued citation and penalty assessment [CITATION NUMBER] in the amount of $[AMOUNT] for failing to pay minimum wage for all hours worked as required by Labor Code section 1197. Citation [CITATION NUMBER] included an assessment for the unpaid minimum wages in the amount of $[AMOUNT]. This citation was entered as judgment on [JUDGMENT DATE] and remains wholly unsatisfied. Since entry of judgment, interest has accrued at the legal rate and the amount currently owed is $[AMOUNT].'</defaultValue>
    <label>WCA 115 In addition Paragraph</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>