force-app/main/default/objects/Wage_Claim__c/fields/WCA_115_In_view_Paragraph__c.field-meta.xml
<CustomField>
    <fullName>WCA_115_In_view_Paragraph__c</fullName>
    <label>WCA 115 In view Paragraph</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>