force-app/main/default/objects/Wage_Claim__c/fields/WCA_11_Other_Text__c.field-meta.xml
<CustomField>
    <fullName>WCA_11_Other_Text__c</fullName>
    <label>WCA 11 Other Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>