force-app/main/default/objects/Wage_Claim__c/fields/WCA_11_Type__c.field-meta.xml
<CustomField>
    <fullName>WCA_11_Type__c</fullName>
    <label>WCA 11 Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Livadas</fullName>
            </value>
            <value>
                <fullName>Severance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>