force-app/main/default/objects/Wage_Claim__c/fields/WCA_23_Amount_Release__c.field-meta.xml
<CustomField>
    <fullName>WCA_23_Amount_Release__c</fullName>
    <label>WCA 23 Amount Release</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>