force-app/main/default/objects/Wage_Claim__c/fields/WCA_23_Amount_Release_Text__c.field-meta.xml
<CustomField>
    <fullName>WCA_23_Amount_Release_Text__c</fullName>
    <label>WCA 23 Amount Release (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>