force-app/main/default/objects/Wage_Claim__c/fields/WCA_23_Number_of_Days_to_Payment__c.field-meta.xml
<CustomField>
    <fullName>WCA_23_Number_of_Days_to_Payment__c</fullName>
    <label>WCA 23 Number of Days to Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>