force-app/main/default/objects/Wage_Claim__c/fields/WCA_26_Settlement_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>WCA_26_Settlement_Agreement_Date__c</fullName>
    <label>WCA 26 Settlement Agreement Date</label>
    <type>Date</type>
</CustomField>