force-app/main/default/objects/Wage_Claim__c/fields/WCA_26C_Text_Area__c.field-meta.xml
<CustomField>
    <fullName>WCA_26C_Text_Area__c</fullName>
    <label>WCA 26C Text Area</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>