force-app/main/default/objects/Wage_Claim__c/fields/WCA_27_Party_to_Send_to__c.field-meta.xml
<CustomField>
    <fullName>WCA_27_Party_to_Send_to__c</fullName>
    <label>WCA 27 Party to Send to</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plaintiff</fullName>
            </value>
            <value>
                <fullName>Defendant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>