force-app/main/default/objects/Wage_Claim__c/fields/WCA_27_Post_Master_City__c.field-meta.xml
<CustomField>
    <fullName>WCA_27_Post_Master_City__c</fullName>
    <label>WCA 27 Post Master City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>