force-app/main/default/objects/Wage_Claim__c/fields/WCA_2_Claim_is_being_transferred__c.field-meta.xml
<CustomField>
    <fullName>WCA_2_Claim_is_being_transferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WCA 2 Claim is being transferred</label>
    <type>Checkbox</type>
</CustomField>