force-app/main/default/objects/Wage_Claim__c/fields/WCA_2_Other_Text__c.field-meta.xml
<CustomField>
    <fullName>WCA_2_Other_Text__c</fullName>
    <label>WCA 2 Other Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>