force-app/main/default/objects/Wage_Claim__c/fields/WCA_30_Rescheduled_Datetime__c.field-meta.xml
<CustomField>
    <fullName>WCA_30_Rescheduled_Datetime__c</fullName>
    <label>WCA 30 Rescheduled Datetime</label>
    <type>DateTime</type>
</CustomField>