force-app/main/default/objects/Wage_Claim__c/fields/WCA_30_Rescheduled_Office__c.field-meta.xml
<CustomField>
    <fullName>WCA_30_Rescheduled_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WCA 30 Rescheduled Office</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Office</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Wage Claims (WCA 30 Rescheduled Office)</relationshipLabel>
    <relationshipName>Wage_Claims2</relationshipName>
    <type>Lookup</type>
</CustomField>