force-app/main/default/objects/Wage_Claim__c/fields/WCA_31_Free_Text__c.field-meta.xml
<CustomField>
    <fullName>WCA_31_Free_Text__c</fullName>
    <label>WCA 31 Free Text</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>