force-app/main/default/objects/Wage_Claim__c/fields/WCA_31_Show_Cause_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>WCA_31_Show_Cause_Date_Time__c</fullName>
    <label>WCA 31 Show Cause Date Time</label>
    <type>DateTime</type>
</CustomField>