force-app/main/default/objects/Wage_Claim__c/fields/WCA_3C_Paragraph_3__c.field-meta.xml
<CustomField>
    <fullName>WCA_3C_Paragraph_3__c</fullName>
    <defaultValue>'Our review of the claim you have filed in this case indicates you are seeking to enforce certain statutory liens.  Legal proceedings that involve statutory liens require unique and specialized procedures.  The procedures available in proceedings before the Labor Commissioner are generally speaking not designed to accommodate claims that call for the enforcement of statutory liens.  After carefully considering the circumstances of this case, it is our conclusion that the administrative process afforded by the Labor Commissioner does not provide an appropriate forum in which to enforce the statutory liens presented by the instant claim.'</defaultValue>
    <label>WCA 3C Statutory Liens</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>