force-app/main/default/objects/Wage_Claim__c/fields/WCA_3D_Paragraph_3__c.field-meta.xml
<CustomField>
    <fullName>WCA_3D_Paragraph_3__c</fullName>
    <defaultValue>'The case arises out of the claim that you filed with this office seeking to recover unreimbursed medical expenses.  Examination of your claim reveals that it presents a number of complex issues.  After a careful review of these issues, it is our view that the administrative process afforded by the Labor Commissioner is not well suited to resolution of the intricate legal questions presented by your claim.'</defaultValue>
    <label>WCA 3D Unreimbursed Medical Expenses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>