force-app/main/default/objects/Wage_Claim__c/fields/WCA_42_Documents__c.field-meta.xml
<CustomField>
    <fullName>WCA_42_Documents__c</fullName>
    <label>WCA 42 Documents</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>