force-app/main/default/objects/Wage_Claim__c/fields/WCA_42_Subpoenaed_Individual__c.field-meta.xml
<CustomField>
    <fullName>WCA_42_Subpoenaed_Individual__c</fullName>
    <label>WCA 42 Subpoenaed Individual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>