force-app/main/default/objects/Wage_Claim__c/fields/WCA_43_No_Personal_Appearance__c.field-meta.xml
<CustomField>
    <fullName>WCA_43_No_Personal_Appearance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WCA 43 No Personal Appearance</label>
    <type>Checkbox</type>
</CustomField>