force-app/main/default/objects/Wage_Claim__c/fields/WCA_43_Person_Declares__c.field-meta.xml
<CustomField>
    <fullName>WCA_43_Person_Declares__c</fullName>
    <label>WCA 43 Person Declares</label>
    <length>255</length>
    <type>Text</type>
</CustomField>