force-app/main/default/objects/Wage_Claim__c/fields/WCA_50_Defendant_Text__c.field-meta.xml
<CustomField>
    <fullName>WCA_50_Defendant_Text__c</fullName>
    <label>WCA 50-DEF Additional Text</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>