force-app/main/default/objects/Wage_Claim__c/fields/WCA_55_Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>WCA_55_Agreement_Type__c</fullName>
    <label>WCA 55 Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>an Oral</fullName>
            </value>
            <value>
                <fullName>a Written</fullName>
            </value>
            <value>
                <fullName>a Collective Bargaining</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>