force-app/main/default/objects/Wage_Claim__c/fields/WCA_55_Alleging_additional_wages__c.field-meta.xml
<CustomField>
    <fullName>WCA_55_Alleging_additional_wages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WCA 55 Alleging additional wages</label>
    <type>Checkbox</type>
</CustomField>