force-app/main/default/objects/Wage_Claim__c/fields/WCA_55_Alleging_liquidated_damages__c.field-meta.xml
<CustomField>
    <fullName>WCA_55_Alleging_liquidated_damages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WCA 55 Alleging liquidated damages</label>
    <type>Checkbox</type>
</CustomField>