force-app/main/default/objects/Wage_Claim__c/fields/WCA_55_As_set_out_below__c.field-meta.xml
<CustomField>
    <fullName>WCA_55_As_set_out_below__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WCA 55 As set out below</label>
    <type>Checkbox</type>
</CustomField>