force-app/main/default/objects/Wage_Claim__c/fields/WCA_55_As_Shown_in_attached_Exhibit_A__c.field-meta.xml
<CustomField>
    <fullName>WCA_55_As_Shown_in_attached_Exhibit_A__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WCA 55 As Shown in attached Exhibit A</label>
    <type>Checkbox</type>
</CustomField>