force-app/main/default/objects/Wage_Claim__c/fields/WCA_55_California_County__c.field-meta.xml
<CustomField>
    <fullName>WCA_55_California_County__c</fullName>
    <label>WCA 55 California County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>