force-app/main/default/objects/Wage_Claim__c/fields/WCA_55_Period_To__c.field-meta.xml
<CustomField>
    <fullName>WCA_55_Period_To__c</fullName>
    <label>WCA 55 Period To</label>
    <type>Date</type>
</CustomField>