force-app/main/default/objects/Wage_Claim__c/fields/WCA_55_Pronoun__c.field-meta.xml
<CustomField>
    <fullName>WCA_55_Pronoun__c</fullName>
    <label>WCA 55 Pronoun</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>He is</fullName>
            </value>
            <value>
                <fullName>He was</fullName>
            </value>
            <value>
                <fullName>She is</fullName>
            </value>
            <value>
                <fullName>She was</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>