force-app/main/default/objects/Wage_Claim__c/fields/WCA_55_Type__c.field-meta.xml
<CustomField>
    <fullName>WCA_55_Type__c</fullName>
    <label>WCA 55 Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COMPLAINT</fullName>
                <default>true</default>
                <label>COMPLAINT</label>
            </value>
            <value>
                <fullName>AMENDED COMPLAINT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>