force-app/main/default/objects/Wage_Claim__c/fields/WCA_60_Fast_Track__c.field-meta.xml
<CustomField>
    <fullName>WCA_60_Fast_Track__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WCA 60 Fast Track</label>
    <type>Checkbox</type>
</CustomField>