force-app/main/default/objects/Wage_Claim__c/fields/WCA_66_Date_Documents_Were_Sent__c.field-meta.xml
<CustomField>
    <fullName>WCA_66_Date_Documents_Were_Sent__c</fullName>
    <label>WCA 66 Date Documents Were Sent</label>
    <type>Date</type>
</CustomField>