force-app/main/default/objects/Wage_Claim__c/fields/WCA_66_Method_of_Service__c.field-meta.xml
<CustomField>
    <fullName>WCA_66_Method_of_Service__c</fullName>
    <label>WCA 66 Method of Service</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Class Mail</fullName>
            </value>
            <value>
                <fullName>Certified Mail</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>